--- a/yaml_files/RHN_diff_NH_cs11.yaml
+++ b/yaml_files/RHN_diff_NH_cs11.yaml
@@ -30,8 +30,8 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-7, 0.23]
-      prior_type: log
+      range: [1E-6, 0.23]
+      prior_type: flat
     dmNu21:
       range: [6e-5, 9e-5]
       prior_type: flat
@@ -60,10 +60,10 @@ Parameters:
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [100, 500]
+      range: [1, 500]
       prior_type: log
     delta_M21:
-      range: [1E-6, 1]
+      range: [1E-20, 1e-19]
       prior_type: log
     M_3:
       range: [0.06, 500]
@@ -71,15 +71,15 @@ Parameters:
     ReOm23:
       range: [0, 6.283]
     ImOm23:
-      range: [-10, 10]
+      range: [-17, 17]
     ReOm13:
       range: [0, 6.283]
     ImOm13:
-      range: [-10, 10]
+      range: [-17, 17]
     ReOm12:
       range: [0, 6.283]
     ImOm12:
-      range: [-10, 10]
+      range: [-17, 17]
     Rorder:
       range: [0, 6]
 
@@ -109,7 +109,7 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-8
+      convthresh: 1e-9
       lambdajDE: false
 
     multinest:
@@ -139,7 +139,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLlepuniv
-    purpose: LogLike
+    purpose: Observable
 
   - capability: LUV_LL
     purpose: LogLike
@@ -151,16 +151,16 @@ ObsLikes:
     purpose: Observable
 
   - capability: lnL_mbb_0nubb_KamLAND_Zen
-    purpose: LogLike
+    purpose: Observable
 
   - capability: lnL_mbb_0nubb_GERDA
-    purpose: LogLike
+    purpose: Observable
 
   - capability: lnLckm_Vusmin
     purpose: LogLike
 
   - capability: l2lgamma_lnL
-    purpose: LogLike
+    purpose: Observable
 
   - capability: l2lll_lnL
     purpose: LogLike
@@ -328,7 +328,7 @@ ObsLikes:
     options:
       i: 1
       I: 1
-      slope: 0.5
+      slope: 3.
       threshold: 1e0
 
 Rules:
@@ -351,4 +351,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs1/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs11/"
