--- a/yaml_files/RHN_diff_NH_cs14.yaml
+++ b/yaml_files/RHN_diff_NH_cs14.yaml
@@ -60,10 +60,10 @@ Parameters:
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [100, 500]
+      range: [0.06, 1.5]
       prior_type: log
     delta_M21:
-      range: [1E-6, 1]
+      range: [1E-10, .1]
       prior_type: log
     M_3:
       range: [0.06, 500]
@@ -71,15 +71,15 @@ Parameters:
     ReOm23:
       range: [0, 6.283]
     ImOm23:
-      range: [-10, 10]
+      range: [-7, 7]
     ReOm13:
       range: [0, 6.283]
     ImOm13:
-      range: [-10, 10]
+      range: [-7, 7]
     ReOm12:
       range: [0, 6.283]
     ImOm12:
-      range: [-10, 10]
+      range: [-7, 7]
     Rorder:
       range: [0, 6]
 
@@ -109,7 +109,7 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-8
+      convthresh: 1e-10
       lambdajDE: false
 
     multinest:
@@ -326,9 +326,9 @@ ObsLikes:
   - capability: RHN_coupling_slide
     purpose: LogLike
     options:
-      i: 1
+      i: 3
       I: 1
-      slope: 0.5
+      slope: .5
       threshold: 1e0
 
 Rules:
@@ -351,4 +351,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs1/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs14/"
