--- a/yaml_files/RHN_diff_NH_cs4.yaml
+++ b/yaml_files/RHN_diff_NH_cs4.yaml
@@ -30,8 +30,8 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-7, 0.23]
-      prior_type: log
+      range: [1E-2, 0.23]
+      prior_type: flat
     dmNu21:
       range: [6e-5, 9e-5]
       prior_type: flat
@@ -60,10 +60,10 @@ Parameters:
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [100, 500]
+      range: [3, 30]
       prior_type: log
     delta_M21:
-      range: [1E-6, 1]
+      range: [1E-6, 0.1]
       prior_type: log
     M_3:
       range: [0.06, 500]
@@ -351,4 +351,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs1/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs4/"
