Commented out some ROOT-dependent ColliderBit LHC analyses in a few yaml files.
	modified:   yaml_files/CMSSM.yaml
	modified:   yaml_files/MSSM11_mApoint.yaml
	modified:   yaml_files/MSSM20atMSUSY_mApoint_FEFTH.yaml

--- a/yaml_files/MSSM20atMSUSY_mApoint_FEFTH.yaml
+++ b/yaml_files/MSSM20atMSUSY_mApoint_FEFTH.yaml
@@ -549,10 +549,11 @@ Rules:
                    "ATLAS_13TeV_MultiLEP_36invfb",
                    "ATLAS_13TeV_0LEPStop_20invfb",
                    "ATLAS_13TeV_2LEPStop_36invfb",
-                   "ATLAS_13TeV_RJ3L_lowmass_36invfb",
                    "ATLAS_13TeV_2bMET_36invfb"] ]
 
                    # "ATLAS_13TeV_1LEPStop_36invfb",
+                   # "ATLAS_13TeV_RJ3L_lowmass_36invfb",
+                   # These analyses currently depend on ROOT
 
   # CMS analysis setup
   - capability: CMSAnalysisContainer
