--- a/yaml_files/RHN_diff.yaml
+++ b/yaml_files/RHN_diff.yaml
@@ -126,10 +126,10 @@ ObsLikes:
   - capability: lnL_W_mass
     purpose: LogLike
 
-#  - capability: lnL_sinW2
-#    purpose: LogLike
+  - capability: lnL_sinW2
+    purpose: LogLike
 
-  - capability: lnL_Z_inv_width
+  - capability: lnL_Z_inv
     purpose: LogLike
 
   - capability: lnL_W_decays
