--- a/yaml_files/RHN_diff_NH_cs16.yaml
+++ b/yaml_files/RHN_diff_NH_cs16.yaml
@@ -127,8 +127,8 @@ ObsLikes:
   - capability: lnL_sinW2
     purpose: LogLike
 
-#  - capability: lnL_Z_inv_width
-#    purpose: Observable
+  - capability: lnL_Z_inv
+    purpose: LogLike
 
   - capability: lnL_W_decays
     purpose: LogLike
