--- a/yaml_files/RHN_diff_NH_cs28.yaml
+++ b/yaml_files/RHN_diff_NH_cs28.yaml
@@ -30,14 +30,16 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-7, 0.23]
+      range: [1E-6, 0.23]
       prior_type: log
     dmNu21:
-      range: [6e-5, 9e-5]
-      prior_type: flat
+      #range: [6e-5, 9e-5]
+      #prior_type: flat
+      fixed_value: 7.5e-5
     dmNu3l:
-      range: [2e-3, 3e-3]
-      prior_type: flat
+      #range: [2e-3, 3e-3]
+      #prior_type: flat
+      fixed_value: 2.5e-3
 
     alpha1:
       range: [0, 6.283]
@@ -46,11 +48,14 @@ Parameters:
     delta13:
       range: [0, 6.283] # 3-sigma range from NuFit
     theta12:
-      range: [0.547684, 0.628144] # 3-sigma range from NuFit
+      #range: [0.547684, 0.628144] # 3-sigma range from NuFit
+      fixed_value: 0.6
     theta23:
-      range: [0.670206, 0.925025] # 3-sigma range from NuFit
+      #range: [0.670206, 0.925025] # 3-sigma range from NuFit
+      fixed_value: 0.8
     theta13:
-      range: [0.139452, 0.155509] # 3-sigma range from NuFit
+      #range: [0.139452, 0.155509] # 3-sigma range from NuFit
+      fixed_value: 0.145
 
   # Higgs boson parameters
   StandardModel_Higgs:
@@ -60,7 +65,7 @@ Parameters:
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [0.06, 1.5]
+      range: [0.5, 1.]
       prior_type: log
     delta_M21:
       range: [1E-10, .1]
@@ -71,15 +76,15 @@ Parameters:
     ReOm23:
       range: [0, 6.283]
     ImOm23:
-      range: [-17, 17]
+      range: [-10, 10]
     ReOm13:
       range: [0, 6.283]
     ImOm13:
-      range: [-17, 17]
+      range: [-10, 10]
     ReOm12:
       range: [0, 6.283]
     ImOm12:
-      range: [-17, 17]
+      range: [-10, 10]
     Rorder:
       range: [0, 6]
 
@@ -109,7 +114,7 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-11
+      convthresh: 1e-12
       lambdajDE: true
 
     multinest:
@@ -121,101 +126,101 @@ ObsLikes:
 
   # EWPO constraints
 
-  - capability: lnL_W_mass
-    purpose: LogLike
+  #  - capability: lnL_W_mass
+  #    purpose: LogLike
+  #
+  #  - capability: lnL_sinW2
+  #    purpose: LogLike
+  #
+  #  - capability: lnL_Z_inv
+  #    purpose: LogLike
+  #
+  #  - capability: lnL_W_decays
+  #    purpose: LogLike
+  #
+  #  # Indirect searches
+  #
+  #  - capability: lnL_bbn
+  #    purpose: LogLike
 
-  - capability: lnL_sinW2
-    purpose: LogLike
-
-  - capability: lnL_Z_inv
-    purpose: LogLike
-
-  - capability: lnL_W_decays
-    purpose: LogLike
-
-  # Indirect searches
-
-  - capability: lnL_bbn
-    purpose: LogLike
-
-  - capability: lnLlepuniv
-    purpose: LogLike
-
-  - capability: LUV_LL
-    purpose: LogLike
-
-  - capability: mbb_0nubb_Xe
-    purpose: Observable
-
-  - capability: mbb_0nubb_Ge
-    purpose: Observable
-
-  - capability: lnL_mbb_0nubb_KamLAND_Zen
-    purpose: LogLike
-
-  - capability: lnL_mbb_0nubb_GERDA
-    purpose: LogLike
-
-  - capability: lnLckm_Vusmin
-    purpose: LogLike
-
-  - capability: l2lgamma_lnL
-    purpose: LogLike
-
-  - capability: l2lll_lnL
-    purpose: LogLike
-
-  - capability: mu2e_lnL
-    purpose: LogLike
+  #  - capability: lnLlepuniv
+  #    purpose: LogLike
+  #
+  #  - capability: LUV_LL
+  #    purpose: LogLike
+  #
+  #  - capability: mbb_0nubb_Xe
+  #    purpose: Observable
+  #
+  #  - capability: mbb_0nubb_Ge
+  #    purpose: Observable
+  #
+  #  - capability: lnL_mbb_0nubb_KamLAND_Zen
+  #    purpose: LogLike
+  #
+  #  - capability: lnL_mbb_0nubb_GERDA
+  #    purpose: LogLike
+  #
+  #  - capability: lnLckm_Vusmin
+  #    purpose: LogLike
+  #
+  #  - capability: l2lgamma_lnL
+  #    purpose: LogLike
+  #
+  #  - capability: l2lll_lnL
+  #    purpose: LogLike
+  #
+  #  - capability: mu2e_lnL
+  #    purpose: LogLike
 
   # Direct searches
 
-  - capability: lnLpienu
-    purpose: LogLike
-
-  - capability: lnLps191e
-    purpose: LogLike
-
-  - capability: lnLps191mu
-    purpose: LogLike
+  #  - capability: lnLpienu
+  #    purpose: LogLike
+  #
+  #  - capability: lnLps191e
+  #    purpose: LogLike
+  #
+  #  - capability: lnLps191mu
+  #    purpose: LogLike
 
   - capability: lnLcharme
     purpose: LogLike
 
-  - capability: lnLcharmmu
-    purpose: LogLike
+  #  - capability: lnLcharmmu
+  #    purpose: LogLike
 
-  - capability: lnLdelphi_shortlived
-    purpose: LogLike
-
-  - capability: lnLdelphi_longlived
-    purpose: LogLike
-
-  - capability: lnLatlase
-    purpose: LogLike
-
-  - capability: lnLatlasmu
-    purpose: LogLike
-
-  - capability: lnLe949
-    purpose: LogLike
+  #  - capability: lnLdelphi_shortlived
+  #    purpose: LogLike
+  #
+  #  - capability: lnLdelphi_longlived
+  #    purpose: LogLike
+  #
+  #  - capability: lnLatlase
+  #    purpose: LogLike
+  #
+  #  - capability: lnLatlasmu
+  #    purpose: LogLike
+  #
+  #  - capability: lnLe949
+  #    purpose: LogLike
 
   - capability: lnLnutev
     purpose: LogLike
 
-  - capability: lnLcharmtau
-    purpose: LogLike
-
-  - capability: lnLlhce
-    purpose: LogLike
-
-  - capability: lnLlhcmu
-    purpose: LogLike
-
-  # Theoretical constraints
-
-  - capability: perturbativity_lnL
-    purpose: LogLike
+  #  - capability: lnLcharmtau
+  #    purpose: LogLike
+  #
+  #  - capability: lnLlhce
+  #    purpose: LogLike
+  #
+  #  - capability: lnLlhcmu
+  #    purpose: LogLike
+  #
+  #  # Theoretical constraints
+  #
+  #  - capability: perturbativity_lnL
+  #    purpose: LogLike
 
   # NuFit likelihoods
   
@@ -351,4 +356,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs26/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs28/"
