--- a/yaml_files/RHN_diff_NH_cs30.yaml
+++ b/yaml_files/RHN_diff_NH_cs30.yaml
@@ -71,15 +71,15 @@ Parameters:
     ReOm23:
       range: [0, 6.283]
     ImOm23:
-      range: [-17, 17]
+      range: [-7, 7]
     ReOm13:
       range: [0, 6.283]
     ImOm13:
-      range: [-17, 17]
+      range: [-7, 7]
     ReOm12:
       range: [0, 6.283]
     ImOm12:
-      range: [-17, 17]
+      range: [-7, 7]
     Rorder:
       range: [0, 6]
 
@@ -109,7 +109,7 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-11
+      convthresh: 1e-12
       lambdajDE: true
 
     multinest:
@@ -328,7 +328,7 @@ ObsLikes:
     options:
       i: 3
       I: 1
-      slope: 6
+      slope: .5
       threshold: 1e0
 
 Rules:
@@ -351,4 +351,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs26/"
+  default_output_path: "/home/ubuntu/data/RHN_diff_NH_cs30/"
