--- a/yaml_files/MSSMEW_rj_pp.yaml
+++ b/yaml_files/MSSMEW_rj_pp.yaml
@@ -8,6 +8,22 @@ Parameters:
   # SM nuisance parameters fixed for now.
   StandardModel_SLHA2: !import include/StandardModel_SLHA2_postprocessing.yaml
 
+  nuclear_params_sigmas_sigmal:
+    deltad: -0.427
+    deltas: -0.085
+    deltau: 0.842
+    sigmal: 58
+    sigmas: 43
+  Halo_gNFW_rho0:
+    alpha: 1
+    beta: 3
+    gamma: 1
+    r_sun: 8.5
+    rho0: 0.5
+    rs: 20
+    v0: 240
+    vesc: 533
+    vrot: 240
   MSSM11atQ_mA:
     Ad_3:
       prior_type: none
@@ -45,6 +61,8 @@ Printer:
   # Can switch to the ascii printer by commenting out and
   # using the ascii lines below
 
+  # printer: cout
+
   printer: hdf5
   options:
     output_file: "MSSMEW.hdf5"
@@ -72,7 +90,7 @@ Scanner:
       plugin: random
       point_number: 2
       output_file:  output
-      like:  Likelihood
+      like:  LogLike
       files:
         output_file: "weights ..."
 
@@ -102,78 +120,78 @@ Scanner:
 
 ObsLikes:
 
-    # Likelihoods for SM nuisance parameters
-    - purpose:    LogLike
-      capability: lnL_t_mass
+    # # Likelihoods for SM nuisance parameters
+    # - purpose:    LogLike
+    #   capability: lnL_t_mass
 
-    - purpose:    LogLike
-      capability: lnL_alpha_s
+    # - purpose:    LogLike
+    #   capability: lnL_alpha_s
 
-    # Combined LHC likelihood
-    - purpose:    LogLike
-      capability: LHC_Combined_LogLike
+    # # Combined LHC likelihood
+    # - purpose:    LogLike
+    #   capability: LHC_Combined_LogLike
 
-    # LEP likelihoods
-    - purpose:    LogLike
-      capability: L3_Neutralino_Leptonic_LLike
+    # # LEP likelihoods
+    # - purpose:    LogLike
+    #   capability: L3_Neutralino_Leptonic_LLike
 
-    - purpose:    LogLike
-      capability: L3_Chargino_Leptonic_LLike
+    # - purpose:    LogLike
+    #   capability: L3_Chargino_Leptonic_LLike
 
-    - purpose:    LogLike
-      capability: OPAL_Chargino_Hadronic_LLike
+    # - purpose:    LogLike
+    #   capability: OPAL_Chargino_Hadronic_LLike
 
-    - purpose:    LogLike
-      capability: OPAL_Chargino_SemiLeptonic_LLike
+    # - purpose:    LogLike
+    #   capability: OPAL_Chargino_SemiLeptonic_LLike
 
-    - purpose:    LogLike
-      capability: OPAL_Chargino_Leptonic_LLike
+    # - purpose:    LogLike
+    #   capability: OPAL_Chargino_Leptonic_LLike
 
-    - purpose:    LogLike
-      capability: OPAL_Neutralino_Hadronic_LLike
+    # - purpose:    LogLike
+    #   capability: OPAL_Neutralino_Hadronic_LLike
 
-    - purpose:    LogLike
-      capability: OPAL_Degenerate_Chargino_LLike
+    # - purpose:    LogLike
+    #   capability: OPAL_Degenerate_Chargino_LLike
 
-    # # Dark matter likelihoods
-    # - capability: lnL_oh2
-    #   purpose:    LogLike
+    # Dark matter likelihoods
+    - capability: lnL_oh2
+      purpose:    LogLike
 
-    # - capability: lnL_FermiLATdwarfs
-    #   purpose:    LogLike
+    - capability: lnL_FermiLATdwarfs
+      purpose:    LogLike
 
-    # - capability: XENON100_2012_LogLikelihood
-    #   purpose:    LogLike
+    - capability: XENON100_2012_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: XENON1T_2017_LogLikelihood
-    #   purpose:    LogLike
+    - capability: XENON1T_2017_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: LUX_2016_LogLikelihood
-    #   purpose:    LogLike
+    - capability: LUX_2016_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: PandaX_2016_LogLikelihood
-    #   purpose:    LogLike
+    - capability: PandaX_2016_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: PandaX_2017_LogLikelihood
-    #   purpose:    LogLike
+    - capability: PandaX_2017_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: PICO_2L_LogLikelihood
-    #   purpose:    LogLike
+    - capability: PICO_2L_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: PICO_60_F_LogLikelihood
-    #   purpose:    LogLike
+    - capability: PICO_60_F_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: PICO_60_2017_LogLikelihood
-    #   purpose:    LogLike
+    - capability: PICO_60_2017_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: SuperCDMS_2014_LogLikelihood
-    #   purpose:    LogLike
+    - capability: SuperCDMS_2014_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: SIMPLE_2014_LogLikelihood
-    #   purpose:    LogLike
+    - capability: SIMPLE_2014_LogLikelihood
+      purpose:    LogLike
 
-    # - capability: IC79_loglike
-    #   purpose:    LogLike
+    - capability: IC79_loglike
+      purpose:    LogLike
 
     # Likelihoods for invisible decays of Z and Higgs bosons
     - purpose: LogLike
@@ -181,6 +199,7 @@ ObsLikes:
 
     - purpose: LogLike
       capability: lnL_Higgs_invWidth
+
 
     # Observables (not included in likelihood)
     - purpose:    Observable
@@ -195,8 +214,8 @@ ObsLikes:
     - purpose:    Observable
       capability: LHCEventLoopInfo
 
-    # - purpose:    Observable
-    #   capability: RD_oh2
+    - purpose:    Observable
+      capability: RD_oh2
 
     # - purpose:    Observable
     #   capability: mwimp
@@ -297,6 +316,42 @@ Rules:
  # Choose where to get the Higgs couplings from
   - capability: Higgs_Couplings
     function: MSSM_higgs_couplings_pwid
+
+
+
+  # Use DarkSUSY or MicrOmegas for the relic density?
+  - capability: RD_oh2
+    function: RD_oh2_DarkSUSY
+    options:
+      omtype: 1
+    # function: RD_oh2_MicrOmegas
+    # options:
+    #   fast: 1
+    #   Beps: 1e-5
+
+  # Choose to implement the relic density likelihood as a detection or an upper bound.
+  - capability: lnL_oh2
+    function: lnL_oh2_upperlimit
+    # function: lnL_oh2_Simple
+
+  # Choose to rescale signals in direct and indirect detection by the relic density fraction
+  - capability: RD_fraction
+    function: RD_fraction_leq_one
+
+  # Choose to use detailed Fermi Pass 8 dwarf likelihoood from gamlike
+  - capability: lnL_FermiLATdwarfs
+    function:  lnL_FermiLATdwarfs_gamLike
+
+  # Choose to use DarkSUSY yield tables for indirect detection
+  - capability: SimYieldTable
+    function: SimYieldTable_DarkSUSY
+    options:
+      allow_yield_extrapolation: true
+
+  # Use DarkSUSY for calculating direct detection couplings
+  - capability: DD_couplings
+    function: DD_couplings_DarkSUSY
+
 
   ##### LHC Detector and Analysis rules #####
   #
