--- a/yaml_files/RHN_diff_NH_CS4.yaml
+++ b/yaml_files/RHN_diff_NH_CS4.yaml
@@ -355,4 +355,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "/home/ubuntu/data2/RHN_diff_NH_CS4/"
+  default_output_path: "runs/RHN_diff_NH_CS4/"
