Updates yaml and slide

--- a/yaml_files/RHN_diff_NH_e3.yaml
+++ b/yaml_files/RHN_diff_NH_e3.yaml
@@ -60,7 +60,7 @@ Parameters:
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [80, 500]
+      range: [60, 500]
       prior_type: log
     delta_M21:
       range: [1E-20, 1E-10]
@@ -138,8 +138,8 @@ ObsLikes:
   - capability: lnL_bbn
     purpose: LogLike
 
-#  - capability: lnLlepuniv
-#    purpose: LogLike
+  - capability: lnLlepuniv
+    purpose: LogLike
 
   - capability: LUV_LL
     purpose: LogLike
@@ -334,8 +334,8 @@ Rules:
     options:
       I: 1
       i: 1
-      slope: 1.0
-      threshold: 1e0
+      slope: 0.5
+      mslope: 0.5
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
