--- a/yaml_files/RHN_diff_NH_m1.yaml
+++ b/yaml_files/RHN_diff_NH_m1.yaml
@@ -334,8 +334,8 @@ Rules:
     options:
       I: 1
       i: 2
-      slope: 1.0
-      threshold: 1e0
+      slope: 0.5
+      mslope: 0.5
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
