--- a/yaml_files/RHN_diff_NH_m2.yaml
+++ b/yaml_files/RHN_diff_NH_m2.yaml
@@ -60,7 +60,7 @@ Parameters:
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [2, 80]
+      range: [2, 60]
       prior_type: log
     delta_M21:
       range: [1E-20, 1E-10]
@@ -334,8 +334,8 @@ Rules:
     options:
       I: 1
       i: 2
-      slope: 1.0
-      threshold: 1e0
+      slope: 0.5
+      mslope: 0.
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
