--- a/yaml_files/RHN_diff_NH_m3.yaml
+++ b/yaml_files/RHN_diff_NH_m3.yaml
@@ -157,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLckm_Vusmin
-    purpose: LogLike
+    purpose: Observable
 
   - capability: l2lgamma_lnL
     purpose: LogLike 
@@ -334,7 +334,7 @@ Rules:
     options:
       I: 1
       i: 2
-      slope: 0.33
+      slope: 0.5
       mslope: 0.5
 
   - capability: RKstar_0045_11
