--- a/yaml_files/RHN_diff_NH_t1.yaml
+++ b/yaml_files/RHN_diff_NH_t1.yaml
@@ -157,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLckm_Vusmin
-    purpose: LogLike
+    purpose: Observable
 
   - capability: l2lgamma_lnL
     purpose: LogLike
@@ -334,8 +334,8 @@ Rules:
     options:
       I: 1
       i: 3
-      slope: 0.33
-      mslope: 1.5
+      slope: 0.5
+      mslope: 0.75
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
