--- a/yaml_files/RHN_diff_NH_m2.yaml
+++ b/yaml_files/RHN_diff_NH_m2.yaml
@@ -157,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLckm_Vusmin
-    purpose: Observable
+    purpose: LogLike
 
   - capability: l2lgamma_lnL
     purpose: LogLike 
@@ -335,7 +335,7 @@ Rules:
       I: 1
       i: 2
       slope: 0.5
-      mslope: 0.5
+      mslope: 0.0
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
