--- a/yaml_files/RHN_diff_NH_m1.yaml
+++ b/yaml_files/RHN_diff_NH_m1.yaml
@@ -157,7 +157,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: lnLckm_Vusmin
-    purpose: Observable
+    purpose: LogLike
 
   - capability: l2lgamma_lnL
     purpose: LogLike
