--- a/yaml_files/RHN_diff_NH_e3W.yaml
+++ b/yaml_files/RHN_diff_NH_e3W.yaml
@@ -339,7 +339,7 @@ Rules:
 
   - function: lnL_lepuniv
     options:
-      include_R_W: true
+      include_R_W: false
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -359,4 +359,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "runs/RHN_diff_NH_e3/"
+  default_output_path: "runs/RHN_diff_NH_e3W/"
