--- a/yaml_files/RHN_diff_NH_m3W.yaml
+++ b/yaml_files/RHN_diff_NH_m3W.yaml
@@ -333,13 +333,13 @@ Rules:
   - function: coupling_slide
     options:
       I: 1
-      i: 1
+      i: 2
       slope: 0.5
       mslope: 0.5
 
   - function: lnL_lepuniv
     options:
-      include_R_W: true
+      include_R_W: false
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -359,4 +359,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "runs/RHN_diff_NH_e3/"
+  default_output_path: "runs/RHN_diff_NH_m3W/"
