--- a/yaml_files/old_RHN_files/RHN_lepuniv_scan.yaml
+++ b/yaml_files/old_RHN_files/RHN_lepuniv_scan.yaml
@@ -30,8 +30,8 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-6, 0.23]
-      prior_type: flat
+      range: [1E-7, 0.23]
+      prior_type: log
     dmNu21:
       range: [6e-5, 9e-5]
       prior_type: flat
@@ -58,12 +58,12 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos_diff:
+  RightHandedNeutrinos:
     M_1:
-      range: [2, 60]
-      prior_type: log
-    delta_M21:
-      range: [1E-20, 1E-10]
+      range: [0.06, 500]
+      prior_type: flat
+    M_2:
+      range: [0.06, 500]
       prior_type: log
     M_3:
       range: [0.06, 500]
@@ -71,15 +71,15 @@ Parameters:
     ReOm23:
       range: [0, 6.283]
     ImOm23:
-      range: [-15, 15]
+      range: [-7, 7]
     ReOm13:
       range: [0, 6.283]
     ImOm13:
-      range: [-15, 15]
+      range: [-7, 7]
     ReOm12:
       range: [0, 6.283]
     ImOm12:
-      range: [-15, 15]
+      range: [-7, 7]
     Rorder:
       range: [0, 6]
 
@@ -108,9 +108,9 @@ Scanner:
       plugin: diver
       version: 1.0.4
       like: LogLike
-      NP: 19200
-      convthresh: 1e-10
-      lambdajDE: true
+      NP: 6000
+      convthresh: 1e-5
+      lambdajDE: false
 
     multinest:
       plugin: multinest
@@ -138,19 +138,7 @@ ObsLikes:
   - capability: lnL_bbn
     purpose: LogLike
 
-#  - capability: lnLlepuniv
-#    purpose: LogLike
-
-  - capability: lnL_R_K
-    purpose: Observable
-
-  - capability: lnL_R_pi
-    purpose: LogLike
-
-  - capability: lnL_R_tau
-    purpose: LogLike
-
-  - capability: lnL_R_W
+  - capability: lnLlepuniv
     purpose: LogLike
 
   - capability: LUV_LL
@@ -172,7 +160,7 @@ ObsLikes:
     purpose: LogLike
 
   - capability: l2lgamma_lnL
-    purpose: LogLike 
+    purpose: LogLike
 
   - capability: l2lll_lnL
     purpose: LogLike
@@ -335,23 +323,27 @@ ObsLikes:
   - capability: Ut3_phase
     purpose: Observable
 
-  - capability: RHN_coupling_slide
-    purpose: LogLike
-
-  - capability: calc_Vus
+  - capability: R_K
     purpose: Observable
 
-Rules:
-  - function: coupling_slide
-    options:
-      I: 1
-      i: 3
-      slope: 0.5
-      mslope: 0.0
+  - capability: R_pi
+    purpose: Observable
 
-  - function: lnL_lepuniv
-    options:
-      include_R_W: true
+  - capability: R_tau
+    purpose: Observable
+
+  - capability: R_W
+    purpose: Observable
+
+#  - capability: RHN_coupling_slide
+#    purpose: LogLike
+#    options:
+#      i: 1
+#      I: 1
+#      slope: 0.33
+#      threshold: 1e0
+
+Rules:
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -369,6 +361,6 @@ KeyValues:
 
   likelihood:
     model_invalid_for_lnlike_below: -1e10
-    debug: false
+    debug: true
 
-  default_output_path: "./"
+  default_output_path: "./runs/RHN_lepuniv/"
