--- a/yaml_files/RHN_diff_NH_t3.yaml
+++ b/yaml_files/RHN_diff_NH_t3.yaml
@@ -109,7 +109,7 @@ Scanner:
       version: 1.0.4
       like: LogLike
       NP: 19200
-      convthresh: 1e-10
+      convthresh: 5e-11
       lambdajDE: true
 
     multinest:
@@ -138,7 +138,19 @@ ObsLikes:
   - capability: lnL_bbn
     purpose: LogLike
 
-  - capability: lnLlepuniv
+#  - capability: lnLlepuniv
+#    purpose: LogLike
+
+  - capability: lnL_R_K
+    purpose: Observable
+
+  - capability: lnL_R_pi
+    purpose: LogLike
+
+  - capability: lnL_R_tau
+    purpose: LogLike
+
+  - capability: lnL_R_W
     purpose: LogLike
 
   - capability: LUV_LL
@@ -334,8 +346,12 @@ Rules:
     options:
       I: 1
       i: 3
-      slope: 0.5
-      mslope: 0.5
+      slope: 0.7
+      mslope: 0.25
+
+  - function: lnL_lepuniv
+    options:
+      include_R_W: true
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -355,4 +371,4 @@ KeyValues:
     model_invalid_for_lnlike_below: -1e10
     debug: false
 
-  default_output_path: "runs/RHN_diff_NH_t3/"
+  default_output_path: "./"
