--- a/yaml_files/old_RHN_files/RHN_Z_inv_test_point.yaml
+++ b/yaml_files/old_RHN_files/RHN_Z_inv_test_point.yaml
@@ -29,28 +29,15 @@ Parameters:
     CKM_rhobar  :  0.117
     CKM_etabar  :  0.353
 
-    mNu_light:
-      range: [1E-6, 0.23]
-      prior_type: flat
-    dmNu21:
-      range: [6e-5, 9e-5]
-      prior_type: flat
-    dmNu3l:
-      range: [2e-3, 3e-3]
-      prior_type: flat
-
-    alpha1:
-      range: [0, 6.283]
-    alpha2:
-      range: [0, 6.283]
-    delta13:
-      range: [0, 6.283] # 3-sigma range from NuFit
-    theta12:
-      range: [0.547684, 0.628144] # 3-sigma range from NuFit
-    theta23:
-      range: [0.670206, 0.925025] # 3-sigma range from NuFit
-    theta13:
-      range: [0.139452, 0.155509] # 3-sigma range from NuFit
+    mNu_light: 1E-7
+    dmNu21: 7.5e-5
+    dmNu3l: 2.524e-3
+    alpha1: 3.1415
+    alpha2: 3.1415
+    delta13: 3.1415
+    theta12: 0.5857
+    theta23: 0.7260
+    theta13: 0.1476
 
   # Higgs boson parameters
   StandardModel_Higgs:
@@ -58,30 +45,17 @@ Parameters:
       range: [124.1, 127.3]
 
   # Right Handed Neutrino Parameters
-  RightHandedNeutrinos_diff:
-    M_1:
-      range: [2, 60]
-      prior_type: log
-    delta_M21:
-      range: [1E-20, 1E-10]
-      prior_type: log
-    M_3:
-      range: [0.06, 500]
-      prior_type: log
-    ReOm23:
-      range: [0, 6.283]
-    ImOm23:
-      range: [-15, 15]
-    ReOm13:
-      range: [0, 6.283]
-    ImOm13:
-      range: [-15, 15]
-    ReOm12:
-      range: [0, 6.283]
-    ImOm12:
-      range: [-15, 15]
-    Rorder:
-      range: [0, 6]
+  RightHandedNeutrinos:
+    M_1: 50
+    M_2: 50
+    M_3: 50
+    ReOm23: 3.1415
+    ImOm23: 5
+    ReOm13: 3.1415
+    ImOm13: 0
+    ReOm12: 3.1415
+    ImOm12: 0
+    Rorder: 0
 
 Priors:
 
@@ -95,7 +69,7 @@ Printer:
 
 Scanner:
 
-  use_scanner: de
+  use_scanner: random
 
   scanners:
 
@@ -108,9 +82,9 @@ Scanner:
       plugin: diver
       version: 1.0.4
       like: LogLike
-      NP: 19200
-      convthresh: 1e-10
-      lambdajDE: true
+      NP: 1200
+      convthresh: 1e-5
+      lambdajDE: false
 
     multinest:
       plugin: multinest
@@ -121,113 +95,101 @@ ObsLikes:
 
   # EWPO constraints
 
-  - capability: lnL_W_mass
-    purpose: LogLike
+#  - capability: lnL_W_mass
+#    purpose: LogLike
 
-  - capability: lnL_sinW2
-    purpose: LogLike
+#  - capability: lnL_sinW2
+#    purpose: LogLike
 
   - capability: lnL_Z_inv
     purpose: LogLike
 
-  - capability: lnL_W_decays
-    purpose: LogLike
+#  - capability: lnL_W_decays
+#    purpose: LogLike
 
   # Indirect searches
 
-  - capability: lnL_bbn
-    purpose: LogLike
+#  - capability: lnL_bbn
+#    purpose: LogLike
 
 #  - capability: lnLlepuniv
 #    purpose: LogLike
 
-  - capability: lnL_R_K
-    purpose: Observable
+#  - capability: LUV_LL
+#    purpose: LogLike
 
-  - capability: lnL_R_pi
-    purpose: LogLike
+#  - capability: mbb_0nubb_Xe
+#    purpose: Observable
 
-  - capability: lnL_R_tau
-    purpose: LogLike
+#  - capability: mbb_0nubb_Ge
+#    purpose: Observable
 
-  - capability: lnL_R_W
-    purpose: LogLike
+#  - capability: lnL_mbb_0nubb_KamLAND_Zen
+#    purpose: LogLike
 
-  - capability: LUV_LL
-    purpose: LogLike
+#  - capability: lnL_mbb_0nubb_GERDA
+#    purpose: LogLike
 
-  - capability: mbb_0nubb_Xe
-    purpose: Observable
+#  - capability: lnLckm_Vusmin
+#    purpose: LogLike
 
-  - capability: mbb_0nubb_Ge
-    purpose: Observable
+#  - capability: l2lgamma_lnL
+#    purpose: LogLike
 
-  - capability: lnL_mbb_0nubb_KamLAND_Zen
-    purpose: LogLike
+#  - capability: l2lll_lnL
+#    purpose: LogLike
 
-  - capability: lnL_mbb_0nubb_GERDA
-    purpose: LogLike
-
-  - capability: lnLckm_Vusmin
-    purpose: LogLike
-
-  - capability: l2lgamma_lnL
-    purpose: LogLike 
-
-  - capability: l2lll_lnL
-    purpose: LogLike
-
-  - capability: mu2e_lnL
-    purpose: LogLike
+#  - capability: mu2e_lnL
+#    purpose: LogLike
 
   # Direct searches
 
-  - capability: lnLpienu
-    purpose: LogLike
+#  - capability: lnLpienu
+#    purpose: LogLike
 
-  - capability: lnLps191e
-    purpose: LogLike
+#  - capability: lnLps191e
+#    purpose: LogLike
 
-  - capability: lnLps191mu
-    purpose: LogLike
+#  - capability: lnLps191mu
+#    purpose: LogLike
 
-  - capability: lnLcharme
-    purpose: LogLike
+#  - capability: lnLcharme
+#    purpose: LogLike
 
-  - capability: lnLcharmmu
-    purpose: LogLike
+#  - capability: lnLcharmmu
+#    purpose: LogLike
 
-  - capability: lnLdelphi_shortlived
-    purpose: LogLike
+#  - capability: lnLdelphi_shortlived
+#    purpose: LogLike
 
-  - capability: lnLdelphi_longlived
-    purpose: LogLike
+#  - capability: lnLdelphi_longlived
+#    purpose: LogLike
 
-  - capability: lnLatlase
-    purpose: LogLike
+#  - capability: lnLatlase
+#    purpose: LogLike
 
-  - capability: lnLatlasmu
-    purpose: LogLike
+#  - capability: lnLatlasmu
+#    purpose: LogLike
 
-  - capability: lnLe949
-    purpose: LogLike
+#  - capability: lnLe949
+#    purpose: LogLike
 
-  - capability: lnLnutev
-    purpose: LogLike
+#  - capability: lnLnutev
+#    purpose: LogLike
 
-  - capability: lnLcharmtau
-    purpose: LogLike
+#  - capability: lnLcharmtau
+#    purpose: LogLike
 
-  - capability: lnLlhce
-    purpose: LogLike
+#  - capability: lnLlhce
+#    purpose: LogLike
 
-  - capability: lnLlhcmu
-    purpose: LogLike
+#  - capability: lnLlhcmu
+#    purpose: LogLike
 
   # Theoretical constraints
 
-  - capability: perturbativity_lnL
-    purpose: LogLike
+#  - capability: perturbativity_lnL
+#    purpose: LogLike
 
   # NuFit likelihoods
   
@@ -335,23 +297,7 @@ ObsLikes:
   - capability: Ut3_phase
     purpose: Observable
 
-  - capability: RHN_coupling_slide
-    purpose: LogLike
-
-  - capability: calc_Vus
-    purpose: Observable
-
 Rules:
-  - function: coupling_slide
-    options:
-      I: 1
-      i: 3
-      slope: 0.5
-      mslope: 0.0
-
-  - function: lnL_lepuniv
-    options:
-      include_R_W: true
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -369,6 +315,6 @@ KeyValues:
 
   likelihood:
     model_invalid_for_lnlike_below: -1e10
-    debug: false
+    debug: true
 
-  default_output_path: "./"
+  default_output_path: "./runs/RHN_Z_inv_test"
