--- a/yaml_files/old_RHN_files/RHN_diff_NH_lepuniv_scan.yaml
+++ b/yaml_files/old_RHN_files/RHN_diff_NH_lepuniv_scan.yaml
@@ -30,37 +30,47 @@ Parameters:
     CKM_etabar  :  0.353
 
     mNu_light:
-      range: [1E-6, 0.23]
-      prior_type: flat
+#      range: [1E-6, 0.23]
+#      prior_type: flat
+      fixed_value: 1e-5
     dmNu21:
-      range: [6e-5, 9e-5]
-      prior_type: flat
+#      range: [7e-5, 8e-5]
+#      prior_type: flat
+      fixed_value: 7.5e-5
     dmNu3l:
-      range: [2e-3, 3e-3]
-      prior_type: flat
+#      range: [2.4e-3, 2.5e-3]
+#      prior_type: flat
+      fixed_value: 2.45e-3
 
     alpha1:
-      range: [0, 6.283]
+#      range: [0, 6.283]
+      fixed_value: 6.283
     alpha2:
-      range: [0, 6.283]
+#      range: [0, 6.283]
+      fixed_value: 6.283
     delta13:
-      range: [0, 6.283] # 3-sigma range from NuFit
+#      range: [0, 6.283] # 3-sigma range from NuFit
+      fixed_value: 6.283
     theta12:
-      range: [0.547684, 0.628144] # 3-sigma range from NuFit
+#      range: [0.547684, 0.628144] # 3-sigma range from NuFit
+      fixed_value: 0.58
     theta23:
-      range: [0.670206, 0.925025] # 3-sigma range from NuFit
+#      range: [0.670206, 0.925025] # 3-sigma range from NuFit
+      fixed_value: 0.8
     theta13:
-      range: [0.139452, 0.155509] # 3-sigma range from NuFit
+#      range: [0.139452, 0.155509] # 3-sigma range from NuFit
+      fixed_value: 0.145
 
   # Higgs boson parameters
   StandardModel_Higgs:
     mH:
-      range: [124.1, 127.3]
+#      range: [124.1, 127.3]
+      fixed_value: 125.2
 
   # Right Handed Neutrino Parameters
   RightHandedNeutrinos_diff:
     M_1:
-      range: [2, 60]
+      range: [0.06, 500]
       prior_type: log
     delta_M21:
       range: [1E-20, 1E-10]
@@ -108,9 +118,9 @@ Scanner:
       plugin: diver
       version: 1.0.4
       like: LogLike
-      NP: 19200
-      convthresh: 1e-10
-      lambdajDE: true
+      NP: 6200
+      convthresh: 1e-3
+      lambdajDE: false
 
     multinest:
       plugin: multinest
@@ -121,69 +131,57 @@ ObsLikes:
 
   # EWPO constraints
 
-  - capability: lnL_W_mass
-    purpose: LogLike
+#  - capability: lnL_W_mass
+#    purpose: LogLike
 
-  - capability: lnL_sinW2
-    purpose: LogLike
+#  - capability: lnL_sinW2
+#    purpose: LogLike
 
-  - capability: lnL_Z_inv
-    purpose: LogLike
+#  - capability: lnL_Z_inv
+#    purpose: LogLike
 
-  - capability: lnL_W_decays
-    purpose: LogLike
+#  - capability: lnL_W_decays
+#    purpose: LogLike
 
   # Indirect searches
 
-  - capability: lnL_bbn
-    purpose: LogLike
-
-#  - capability: lnLlepuniv
+#  - capability: lnL_bbn
 #    purpose: LogLike
 
-  - capability: lnL_R_K
-    purpose: Observable
-
-  - capability: lnL_R_pi
-    purpose: LogLike
-
-  - capability: lnL_R_tau
-    purpose: LogLike
-
-  - capability: lnL_R_W
+  - capability: lnLlepuniv
     purpose: LogLike
 
   - capability: LUV_LL
     purpose: LogLike
 
-  - capability: mbb_0nubb_Xe
-    purpose: Observable
+#  - capability: mbb_0nubb_Xe
+#    purpose: Observable
 
-  - capability: mbb_0nubb_Ge
-    purpose: Observable
+#  - capability: mbb_0nubb_Ge
+#    purpose: Observable
 
-  - capability: lnL_mbb_0nubb_KamLAND_Zen
-    purpose: LogLike
+#  - capability: lnL_mbb_0nubb_KamLAND_Zen
+#    purpose: LogLike
 
-  - capability: lnL_mbb_0nubb_GERDA
-    purpose: LogLike
+#  - capability: lnL_mbb_0nubb_GERDA
+#    purpose: LogLike
 
-  - capability: lnLckm_Vusmin
-    purpose: LogLike
+#  - capability: lnLckm_Vusmin
+#    purpose: LogLike
 
-  - capability: l2lgamma_lnL
-    purpose: LogLike 
+#  - capability: l2lgamma_lnL
+#    purpose: LogLike 
 
-  - capability: l2lll_lnL
-    purpose: LogLike
+#  - capability: l2lll_lnL
+#    purpose: LogLike
 
-  - capability: mu2e_lnL
-    purpose: LogLike
+#  - capability: mu2e_lnL
+#    purpose: LogLike
 
   # Direct searches
 
-  - capability: lnLpienu
-    purpose: LogLike
+#  - capability: lnLpienu
+#    purpose: LogLike
 
   - capability: lnLps191e
     purpose: LogLike
@@ -197,32 +195,32 @@ ObsLikes:
   - capability: lnLcharmmu
     purpose: LogLike
 
-  - capability: lnLdelphi_shortlived
-    purpose: LogLike
+#  - capability: lnLdelphi_shortlived
+#    purpose: LogLike
 
-  - capability: lnLdelphi_longlived
-    purpose: LogLike
+#  - capability: lnLdelphi_longlived
+#    purpose: LogLike
 
-  - capability: lnLatlase
-    purpose: LogLike
+#  - capability: lnLatlase
+#    purpose: LogLike
 
-  - capability: lnLatlasmu
-    purpose: LogLike
+#  - capability: lnLatlasmu
+#    purpose: LogLike
 
-  - capability: lnLe949
-    purpose: LogLike
+#  - capability: lnLe949
+#    purpose: LogLike
 
-  - capability: lnLnutev
-    purpose: LogLike
+#  - capability: lnLnutev
+#    purpose: LogLike
 
-  - capability: lnLcharmtau
-    purpose: LogLike
+#  - capability: lnLcharmtau
+#    purpose: LogLike
 
-  - capability: lnLlhce
-    purpose: LogLike
+#  - capability: lnLlhce
+#    purpose: LogLike
 
-  - capability: lnLlhcmu
-    purpose: LogLike
+#  - capability: lnLlhcmu
+#    purpose: LogLike
 
   # Theoretical constraints
 
@@ -283,6 +281,8 @@ ObsLikes:
 
   - capability: Ue1
     purpose: Observable
+    options:
+      lower_limit: 1e-5
 
   - capability: Ue1_phase
     purpose: Observable
@@ -345,13 +345,9 @@ Rules:
   - function: coupling_slide
     options:
       I: 1
-      i: 3
-      slope: 0.5
-      mslope: 0.0
-
-  - function: lnL_lepuniv
-    options:
-      include_R_W: true
+      i: 0
+      slope: 1.0
+      threshold: 1e0
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -369,6 +365,6 @@ KeyValues:
 
   likelihood:
     model_invalid_for_lnlike_below: -1e10
-    debug: false
+    debug: true
 
-  default_output_path: "./"
+  default_output_path: "runs/RHN_diff_NH_lepuniv/"
