Added bool option for Ut restriction + modified yamls

--- a/yaml_files/RHN_diff_NH_m0.yaml
+++ b/yaml_files/RHN_diff_NH_m0.yaml
@@ -348,10 +348,11 @@ Rules:
       i: 2
       slope: 0.5
       mslope: -0.5
+      Ut_lim: true
 
   - function: lnL_lepuniv
     options:
-      include_R_W: true
+      include_R_W: true    
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -362,17 +363,17 @@ Rules:
   - capability: RK
     function: RHN_RK
 
-  - function: Ut1
-    options:
-      upper_limit: 1e-4
+#  - function: Ut1
+#    options:
+#      upper_limit: 1e-4
 
-  - function: Ut2
-    options:
-      upper_limit: 1e-4
+#  - function: Ut2
+#    options:
+#      upper_limit: 1e-4
 
-  - function: Ut3
-    options:
-      upper_limit: 1e-4
+#  - function: Ut3
+#    options:
+#      upper_limit: 1e-4
 
 KeyValues:
 
