--- a/yaml_files/RHN_diff_NH_m2.yaml
+++ b/yaml_files/RHN_diff_NH_m2.yaml
@@ -348,6 +348,7 @@ Rules:
       i: 2
       slope: 0.5
       mslope: 0.0
+      Ut_lim: true
 
   - function: lnL_lepuniv
     options:
@@ -362,17 +363,17 @@ Rules:
   - capability: RK
     function: RHN_RK
 
-  - function: Ut1
-    options:
-      upper_limit: 1e-4
+#  - function: Ut1
+#    options:
+#      upper_limit: 1e-4
 
-  - function: Ut2
-    options:
-      upper_limit: 1e-4
+#  - function: Ut2
+#    options:
+#      upper_limit: 1e-4
 
-  - function: Ut3
-    options:
-      upper_limit: 1e-4
+#  - function: Ut3
+#    options:
+#      upper_limit: 1e-4
 
 KeyValues:
 
