--- a/yaml_files/RHN_diff_NH_e3.yaml
+++ b/yaml_files/RHN_diff_NH_e3.yaml
@@ -348,6 +348,7 @@ Rules:
       i: 1
       slope: 0.7
       mslope: 0.25
+      Ut_lim: true
 
   - capability: RKstar_0045_11
     function: RHN_RKstar_0045_11
@@ -358,17 +359,17 @@ Rules:
   - capability: RK
     function: RHN_RK
 
-  - function: Ut1
-    options:
-      upper_limit: 1e-4
+#  - function: Ut1
+#    options:
+#      upper_limit: 1e-4
 
-  - function: Ut2
-    options:
-      upper_limit: 1e-4
+#  - function: Ut2
+#    options:
+#      upper_limit: 1e-4
 
-  - function: Ut3
-    options:
-      upper_limit: 1e-4
+#  - function: Ut3
+#    options:
+#      upper_limit: 1e-4
 
 KeyValues:
 
