Clean-up of Models/SpecBit/DarkBit/DecayBit & yaml files.

--- a/yaml_files/VectorDM.yaml
+++ b/yaml_files/VectorDM.yaml
@@ -1,27 +1,24 @@
 #################################################################################################
 #
-#      DiracDM, low mass region, diver.
+#      VectorDM
 #
 #################################################################################################
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan_HP.yaml
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan_HP.yaml
 
   StandardModel_Higgs:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM_xi:
-    mF: 
-      range: [60., 500.]
+  VectorDM:
+    mV: 
+      range: [45., 10000.]
+      prior_type: log      
+    lambda_hV: 
+      range: [1e-4, 10.]
       prior_type: log
-    lF: 
-      range: [1e-6, 1]
-      prior_type: log
-    xi:
-      range: [0, 3.141592653589793238462643383279502884197]
-      prior_type: flat
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -106,14 +103,14 @@ ObsLikes:
     # SM nuisance parameter likelihoods     
     - capability: lnL_alpha_s
       purpose:    LogLike    
-              
+                    
     # DM Local Halo likelihoods
     - capability: lnL_rho0
       purpose: LogLike
       
     - capability: lnL_v0
       purpose: LogLike
-      
+     
     - capability: lnL_vesc
       purpose: LogLike
       
@@ -129,7 +126,11 @@ ObsLikes:
       
     - capability: sigma_SI_p
       purpose:    Observable
-      function:   sigma_SI_vnqn_FermionDMHiggsPortal
+      function:   sigma_SI_p_simple
+
+    - capability: sigma_SI_n
+      purpose:    Observable
+      function:   sigma_SI_n_simple
 
 ##############################################################################################
 Rules:
@@ -137,17 +138,14 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-    options:
-      oh2_obs: 0.1199
-      oh2_obserr: 0.0027
-      
+
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
     function: lnL_v0_gaussian
     options:
       v0_obs: 240
       v0_obserr: 8
-            
+ 
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
@@ -163,14 +161,14 @@ Rules:
       sigmas_obserr: 8.0
       sigmal_obs: 50.0
       sigmal_obserr: 15.0
-
-  # Choose to use capgen for solar capture
+      
+  # Choose to use capgen for solar capture rate
   - capability: capture_rate_Sun
-    function: capture_rate_Sun_vnqn
+    function: capture_rate_Sun_const_xsec_capgen
     
   - capability: equilibration_time_Sun
-    function: equilibration_time_Sun_FermionDMHiggsPortal
-
+    function: equilibration_time_Sun
+    
   # Choose to rescale signals in direct and indirect detection by the relic density fraction
   - capability: RD_fraction
     function: RD_fraction_leq_one
@@ -178,8 +176,6 @@ Rules:
   # Choose to use detailed Fermi Pass-8 dwarfs likelihoood from gamLike
   - capability: lnL_FermiLATdwarfs
     function:  lnL_FermiLATdwarfs_gamLike
-    options:
-      non_self_conjugate: true
 
   # Choose to use DarkSUSY's yield tables for indirect detection
   - capability: SimYieldTable
@@ -189,17 +185,17 @@ Rules:
 
   # Use DarkBit's own calculations of the direct detection couplings
   - capability: DD_couplings
-    function: DD_couplings_DiracDM
+    function: DD_couplings_VectorDM
 
   # Choose to compute decay rates from the DecayBit module
   - capability: decay_rates
     function: all_decays
 
   # Choose to obtain spectrum from the SpecBit module
-  - capability: DiracDM_spectrum
-    function: get_DiracDM_spectrum
-    options: 
-      impose_EFT_validity: true
+  - capability: VectorDM_spectrum
+    function: get_VectorDM_spectrum
+    options:
+      impose_pert_unitarity: true
 
 ##############################################################################################
 Printer:
@@ -207,22 +203,22 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Dirac_extra_diver.hdf5"
+    output_file: "VectorDM.hdf5"
     delete_file_on_restart: true
-    group: "/DDM"    
+    group: "/VDM"    
 
 ##############################################################################################
 Scanner:
 
-  use_scanner: diver
+  use_scanner: tw
 
   scanners:
 
     mn:
       plugin: multinest
       like: LogLike
-      nlive: 1
-      tol: 0.7
+      nlive: 20000
+      tol: 1E-4
 
     diver:
       plugin: diver
@@ -230,13 +226,12 @@ Scanner:
       NP: 50000
       verbosity: 1
       convthresh: 1E-5
-      jDE: true
       lambdajDE: true
 
     tw:
       plugin: twalk
       sqrtR: 1.001
-      chain_number: 512
+      timeout_mins: 1380
 
 ##############################################################################################
 Logger:
@@ -263,4 +258,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "/marconi_scratch/userexternal/sbloor00/production_scans/Dirac/extra/diver"
+  default_output_path: "runs/VectorDM"
