--- a/yaml_files/DiracDM.yaml
+++ b/yaml_files/DiracDM.yaml
@@ -1,25 +1,27 @@
 #################################################################################################
 #
-#      DiracDM, high mass region, MultiNest.
+#      DiracDM
 #
 #################################################################################################
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan_HP.yaml
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan_HP.yaml
 
   StandardModel_Higgs:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM_xi:
+  DiracDM:
     mF: 
       range: [45., 10000.]
       prior_type: log
     lF: 
       range: [1e-6, 1]
       prior_type: log
-    xi: 0
+    xi:
+      range: [0, 3.141592653589793238462643383279502884197]
+      prior_type: flat
 
   nuclear_params_sigmas_sigmal:
     sigmas:
@@ -111,7 +113,7 @@ ObsLikes:
       
     - capability: lnL_v0
       purpose: LogLike
-     
+      
     - capability: lnL_vesc
       purpose: LogLike
       
@@ -130,14 +132,12 @@ ObsLikes:
       function:   sigma_SI_vnqn_FermionDMHiggsPortal
 
 ##############################################################################################
+
 Rules:
 
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-    options:
-      oh2_obs: 0.1199
-      oh2_obserr: 0.0027
       
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
@@ -145,7 +145,7 @@ Rules:
     options:
       v0_obs: 240
       v0_obserr: 8
-      
+            
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
@@ -205,14 +205,14 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Dirac_MN_xi_0.hdf5"
+    output_file: "DiracDM.hdf5"
     delete_file_on_restart: true
     group: "/DDM"    
 
 ##############################################################################################
 Scanner:
 
-  use_scanner: mn
+  use_scanner: tw
 
   scanners:
 
@@ -227,12 +227,14 @@ Scanner:
       like: LogLike
       NP: 50000
       verbosity: 1
-      convthresh: 0.0001
+      convthresh: 1E-5
+      lambdajDE: true
 
     tw:
       plugin: twalk
       sqrtR: 1.001
-      chain_number: 512
+      timeout_mins: 1380
+      
 
 ##############################################################################################
 Logger:
@@ -259,4 +261,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "production_scans/Dirac/MN/xi_fixed"
+  default_output_path: "runs/DiracDM"
