--- a/yaml_files/MajoranaDM.yaml
+++ b/yaml_files/MajoranaDM.yaml
@@ -1,20 +1,20 @@
 #################################################################################################
 #
-#      MajoranaDM, low mass region, diver.
+#      MajoranaDM
 #
 #################################################################################################
 
 Parameters:
 
-  StandardModel_SLHA2: !import ../../include/StandardModel_SLHA2_scan_HP.yaml
+  StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan_HP.yaml
 
   StandardModel_Higgs:
     mH:
       range: [124.1, 127.3]
 
-  MajoranaDM_xi:
+  MajoranaDM:
     mX: 
-      range: [60., 500.]
+      range: [45., 10000.]
       prior_type: log
     lX: 
       range: [1e-6, 1]
@@ -137,9 +137,6 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-    options:
-      oh2_obs: 0.1199
-      oh2_obserr: 0.0027
       
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
@@ -147,7 +144,7 @@ Rules:
     options:
       v0_obs: 240
       v0_obserr: 8
-      
+            
   # Set vesc to 533 +/- 32 km/s based on RAVE survey [arXiv:1309.4293]
   - capability: lnL_vesc
     function: lnL_vesc_gaussian
@@ -205,22 +202,22 @@ Printer:
   printer: hdf5
 
   options:
-    output_file: "Majorana_extra_diver.hdf5"
+    output_file: "MajoranaDM.hdf5"
     delete_file_on_restart: true
     group: "/MDM"    
 
 ##############################################################################################
 Scanner:
 
-  use_scanner: diver
+  use_scanner: tw
 
   scanners:
 
     mn:
       plugin: multinest
       like: LogLike
-      nlive: 1
-      tol: 0.7
+      nlive: 20000
+      tol: 1E-4
 
     diver:
       plugin: diver
@@ -228,13 +225,12 @@ Scanner:
       NP: 50000
       verbosity: 1
       convthresh: 1E-5
-      jDE: true
       lambdajDE: true
 
     tw:
       plugin: twalk
       sqrtR: 1.001
-      chain_number: 512
+      timeout_mins: 1380
 
 ##############################################################################################
 Logger:
@@ -261,4 +257,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "/marconi_scratch/userexternal/sbloor00/production_scans/Majorana/extra/diver"
+  default_output_path: "runs/MajoranaDM"
