--- a/yaml_files/scans/Dirac/DiracDM_high_mass_diver.yaml
+++ b/yaml_files/scans/Dirac/DiracDM_high_mass_diver.yaml
@@ -12,7 +12,7 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  DiracDM_xi:
+  DiracDM:
     mF: 
       range: [45., 10000.]
       prior_type: log
@@ -137,9 +137,6 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-    options:
-      oh2_obs: 0.1199
-      oh2_obserr: 0.0027
       
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
@@ -221,8 +218,8 @@ Scanner:
     mn:
       plugin: multinest
       like: LogLike
-      nlive: 1
-      tol: 0.7
+      nlive: 20000
+      tol: 1E-4
 
     diver:
       plugin: diver
@@ -230,13 +227,12 @@ Scanner:
       NP: 50000
       verbosity: 1
       convthresh: 1E-5
-      jDE: true
       lambdajDE: true
 
     tw:
       plugin: twalk
       sqrtR: 1.001
-      chain_number: 512
+      timeout_mins: 1380
 
 ##############################################################################################
 Logger:
@@ -263,4 +259,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "production_scans/Dirac/high_mass/diver"
+  default_output_path: "runs/Dirac/high_mass/diver"
