--- a/yaml_files/scans/Majorana/MajoranaDM_fixed_xi_MN.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_fixed_xi_MN.yaml
@@ -12,7 +12,7 @@ Parameters:
     mH:
       range: [124.1, 127.3]
 
-  MajoranaDM_xi:
+  MajoranaDM:
     mX: 
       range: [45., 10000.]
       prior_type: log
@@ -135,9 +135,6 @@ Rules:
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
-    options:
-      oh2_obs: 0.1199
-      oh2_obserr: 0.0027
       
   # Set v0 to 240 +/- 8 km/s based on Reid et al [arXiv:1401.5377]
   - capability: lnL_v0
@@ -225,12 +222,13 @@ Scanner:
       like: LogLike
       NP: 50000
       verbosity: 1
-      convthresh: 0.0001
+      convthresh: 1E-5
+      lambdajDE: true
 
     tw:
       plugin: twalk
       sqrtR: 1.001
-      chain_number: 512
+      timeout_mins: 1380
 
 ##############################################################################################
 Logger:
@@ -257,4 +255,4 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e+5
     debug: false
 
-  default_output_path: "production_scans/Majorana/MN/xi_fixed"
+  default_output_path: "runs/Majorana/MN/xi_fixed"
