--- a/yaml_files/scans/Majorana/MajoranaDM_high_mass_TWalk_xi_0.yaml
+++ b/yaml_files/scans/Majorana/MajoranaDM_high_mass_TWalk_xi_0.yaml
@@ -132,6 +132,10 @@ ObsLikes:
 ##############################################################################################
 Rules:
 
+  # Use the DarkBit native calculator for the relic density
+  - capability: RD_oh2
+    function: RD_oh2_general
+
   # Choose to implement the relic density likelihood as an upper bound, not a detection
   - capability: lnL_oh2
     function: lnL_oh2_upperlimit
