Added additional version-specific declarations for direct detection functions in DarkBit that require DDCalc.  Brought some example YAML files back up to date. 	modified:   Backends/include/gambit/Backends/frontends/DarkSUSY_5_1_3.hpp 	modified:   Core/src/depresolver.cpp 	modified:   DarkBit/include/gambit/DarkBit/DarkBit_rollcall.hpp 	modified:   DarkBit/src/DirectDetection.cpp 	modified:   DarkBit/src/SunNeutrinos.cpp 	modified:   Elements/include/gambit/Elements/module_macros_incore.hpp 	modified:   Elements/include/gambit/Elements/module_macros_inmodule.hpp 	modified:   config/capabilities.dat 	modified:   yaml_files/CMSSM.yaml 	modified:   yaml_files/MSSM7.yaml 	modified:   yaml_files/NUHM1.yaml 	modified:   yaml_files/NUHM2.yaml

--- a/yaml_files/CMSSM.yaml
+++ b/yaml_files/CMSSM.yaml
@@ -187,10 +187,7 @@ ObsLikes:
     - capability: XENON100_2012_LogLikelihood
       purpose:    LogLike
 
-    - capability: XENON1T_2017_LogLikelihood
-      purpose:    LogLike
-
-    - capability: LUX_2015_LogLikelihood
+    - capability: XENON1T_2018_LogLikelihood
       purpose:    LogLike
 
     - capability: LUX_2016_LogLikelihood
@@ -205,7 +202,7 @@ ObsLikes:
     - capability: PICO_2L_LogLikelihood
       purpose:    LogLike
 
-    - capability: PICO_60_F_LogLikelihood
+    - capability: PICO_60_LogLikelihood
       purpose:    LogLike
 
     - capability: PICO_60_2017_LogLikelihood
@@ -303,6 +300,10 @@ Rules:
   # Tell all functions that are able to dump SLHA files to do so.
   #- options:
   #    drop_SLHA_file: true
+
+  # Choose to use DarkSUSY rather than Capt'n General for calculating the capture rate of DM in the Sun
+  - capability: capture_rate_Sun
+    function: capture_rate_Sun_const_xsec
 
   # Globally permit maximal mixing between gauge and family eigenstates
   - options:
@@ -499,7 +500,6 @@ Rules:
       # m_s
       ms_central: 95.E-03
       ms_error: 5.E-03
-
 
   # ATLAS detector simulation
   - capability: SimpleSmearingSim
